[gd_scene load_steps=12 format=2]

[ext_resource path="res://sceneList/demo21_camera/Scripts/Game.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 15, 0.5, 15 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 30, 1, 30 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="VisualShaderNodeColorUniform" id=7]
uniform_name = "ColorUniform"

[sub_resource type="VisualShaderNodeScalarUniform" id=8]
uniform_name = "AlphaUniform"

[sub_resource type="VisualShader" id=5]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform vec4 ColorUniform : hint_color;
uniform float AlphaUniform;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:3
	vec3 n_out3p0 = ColorUniform.rgb;
	float n_out3p1 = ColorUniform.a;

// ScalarUniform:4
	float n_out4p0 = AlphaUniform;

// Output:0
	ALBEDO = n_out3p0;
	ALPHA = n_out4p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -485.511, -47 )
nodes/fragment/3/node = SubResource( 7 )
nodes/fragment/3/position = Vector2( -60, 100 )
nodes/fragment/4/node = SubResource( 8 )
nodes/fragment/4/position = Vector2( -60, 240 )
nodes/fragment/connections = PoolIntArray( 3, 0, 0, 0, 4, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/ColorUniform = Color( 1, 0, 0, 0.0705882 )
shader_param/AlphaUniform = 1.0

[sub_resource type="CylinderMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0, 1, 0.811765, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="Spatial" parent="."]

[node name="StaticBody" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Ground/StaticBody"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.891251, -0.199836, 0.407109, 0.02026, 0.914331, 0.404461, -0.453058, -0.352228, 0.818947, 6.12325, 15.5472, 16.9715 )

[node name="Cube" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62284, 7.88674 )

[node name="CollisionShape" type="CollisionShape" parent="Cube"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Cube"]
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="Cube2" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.48, 1.62284, -5.18236 )

[node name="CollisionShape" type="CollisionShape" parent="Cube2"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Cube2"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.489991, 0.871727, 0, -0.871727, 0.489991, 0, 5.73804, 0 )
light_energy = 0.426
light_indirect_energy = 0.096

[node name="GUI" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 600.0

[node name="Panel" type="Panel" parent="GUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 520.0
margin_bottom = 620.0
rect_min_size = Vector2( 500, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="HBoxCamera" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_right = 460.0
margin_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxCamera"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxCamera/CenterContainer"]
margin_left = 36.0
margin_top = 13.0
margin_right = 124.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Camera Mode"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxCamera"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="OptionButton" type="OptionButton" parent="GUI/Panel/VBoxContainer/HBoxCamera"]
margin_left = 178.0
margin_right = 460.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
size_flags_horizontal = 3

[node name="HBoxLookAt" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 44.0
margin_right = 460.0
margin_bottom = 84.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxLookAt"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxLookAt/CenterContainer"]
margin_left = 56.0
margin_top = 13.0
margin_right = 104.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Look At"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxLookAt"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="OptionButton" type="OptionButton" parent="GUI/Panel/VBoxContainer/HBoxLookAt"]
margin_left = 178.0
margin_right = 460.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
size_flags_horizontal = 3

[node name="HBoxFollow" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 88.0
margin_right = 460.0
margin_bottom = 128.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxFollow"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxFollow/CenterContainer"]
margin_left = 59.0
margin_top = 13.0
margin_right = 100.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Follow"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxFollow"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="OptionButton" type="OptionButton" parent="GUI/Panel/VBoxContainer/HBoxFollow"]
margin_left = 178.0
margin_right = 460.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
size_flags_horizontal = 3

[node name="HBoxCameraProjection" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 132.0
margin_right = 460.0
margin_bottom = 172.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxCameraProjection"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxCameraProjection/CenterContainer"]
margin_left = 27.0
margin_top = 13.0
margin_right = 132.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Projection Mode"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxCameraProjection"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="OptionButton" type="OptionButton" parent="GUI/Panel/VBoxContainer/HBoxCameraProjection"]
margin_left = 178.0
margin_right = 460.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
size_flags_horizontal = 3

[node name="HBoxDistance" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 176.0
margin_right = 460.0
margin_bottom = 216.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxDistance"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistance/CenterContainer"]
margin_left = 52.0
margin_top = 13.0
margin_right = 108.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Distance"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistance"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="Min" type="HBoxContainer" parent="GUI/Panel/VBoxContainer/HBoxDistance"]
margin_left = 178.0
margin_right = 317.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxDistance/Min"]
margin_right = 24.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistance/Min/CenterContainer"]
margin_top = 13.0
margin_right = 24.0
margin_bottom = 27.0
text = "Min"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistance/Min"]
margin_left = 28.0
margin_top = 13.0
margin_right = 38.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="TextEdit" type="TextEdit" parent="GUI/Panel/VBoxContainer/HBoxDistance/Min"]
margin_left = 42.0
margin_right = 102.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "15"

[node name="Max" type="HBoxContainer" parent="GUI/Panel/VBoxContainer/HBoxDistance"]
margin_left = 321.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxDistance/Max"]
margin_right = 26.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistance/Max/CenterContainer"]
margin_top = 13.0
margin_right = 26.0
margin_bottom = 27.0
text = "Max"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistance/Max"]
margin_left = 30.0
margin_top = 13.0
margin_right = 40.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="TextEdit" type="TextEdit" parent="GUI/Panel/VBoxContainer/HBoxDistance/Max"]
margin_left = 44.0
margin_right = 104.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "200"

[node name="HBoxDistanceScroll" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 220.0
margin_right = 460.0
margin_bottom = 260.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxDistanceScroll"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistanceScroll/CenterContainer"]
margin_left = 30.0
margin_top = 13.0
margin_right = 129.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Distance Offset"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxDistanceScroll"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="CenterContainer2" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxDistanceScroll"]
margin_left = 178.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HScrollBar" type="HScrollBar" parent="GUI/Panel/VBoxContainer/HBoxDistanceScroll/CenterContainer2"]
margin_left = 21.0
margin_top = 14.0
margin_right = 261.0
margin_bottom = 26.0
rect_min_size = Vector2( 240, 12 )

[node name="HBoxAngel" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 264.0
margin_right = 460.0
margin_bottom = 304.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAngel"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAngel/CenterContainer"]
margin_left = 40.0
margin_top = 13.0
margin_right = 119.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Angel Offset"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAngel"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="CenterContainer2" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAngel"]
margin_left = 178.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HScrollBar" type="HScrollBar" parent="GUI/Panel/VBoxContainer/HBoxAngel/CenterContainer2"]
margin_left = 21.0
margin_top = 14.0
margin_right = 261.0
margin_bottom = 26.0
rect_min_size = Vector2( 240, 12 )

[node name="HBoxAutoRotate" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 308.0
margin_right = 460.0
margin_bottom = 348.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/CenterContainer"]
margin_left = 42.0
margin_top = 13.0
margin_right = 117.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Auto Rotate"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="Speed" type="HBoxContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate"]
margin_left = 178.0
margin_right = 317.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Speed" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Speed"]
margin_right = 39.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Speed/Speed"]
margin_top = 13.0
margin_right = 39.0
margin_bottom = 27.0
text = "Speed"

[node name="TextEdit" type="TextEdit" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Speed"]
margin_left = 43.0
margin_right = 103.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "30"

[node name="Swicth" type="HBoxContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate"]
margin_left = 321.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Speed2" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Swicth"]
margin_right = 41.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Swicth/Speed2"]
margin_top = 13.0
margin_right = 41.0
margin_bottom = 27.0
text = "Switch"

[node name="Switch" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Swicth"]
margin_left = 45.0
margin_right = 121.0
margin_bottom = 40.0

[node name="CheckButton" type="CheckButton" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate/Swicth/Switch"]
margin_right = 76.0
margin_bottom = 40.0

[node name="HBoxAutoRotate2" type="HBoxContainer" parent="GUI/Panel/VBoxContainer"]
margin_top = 352.0
margin_right = 460.0
margin_bottom = 392.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/CenterContainer"]
margin_left = 66.0
margin_top = 13.0
margin_right = 94.0
margin_bottom = 27.0
size_flags_vertical = 1
text = "Lerp"

[node name="Empty" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2"]
margin_left = 164.0
margin_top = 13.0
margin_right = 174.0
margin_bottom = 27.0
rect_min_size = Vector2( 10, 0 )

[node name="Speed" type="HBoxContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2"]
margin_left = 178.0
margin_right = 317.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Speed" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Speed"]
margin_right = 39.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Speed/Speed"]
margin_top = 13.0
margin_right = 39.0
margin_bottom = 27.0
text = "Speed"

[node name="TextEdit" type="TextEdit" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Speed"]
margin_left = 43.0
margin_right = 103.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
text = "30"

[node name="Swicth" type="HBoxContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2"]
margin_left = 321.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Speed2" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Swicth"]
margin_right = 41.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Swicth/Speed2"]
margin_top = 13.0
margin_right = 41.0
margin_bottom = 27.0
text = "Switch"

[node name="Switch" type="CenterContainer" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Swicth"]
margin_left = 45.0
margin_right = 121.0
margin_bottom = 40.0

[node name="CheckButton" type="CheckButton" parent="GUI/Panel/VBoxContainer/HBoxAutoRotate2/Swicth/Switch"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true
